# MioGiapicco3

./: ButtonsManager.cpp  ButtonsManager.h  CMakeLists.txt  DHT11.cpp  DHT11.h  DataGatherer.cpp  DataGatherer.h  DataPusher.cpp  DataPusher.h  ImagePusher.cpp  ImagePusher.h  Logger.cpp  Logger.h  NJU6450Driver.cpp  NJU6450Driver.h  SevenSegmentDisplay.cpp  SevenSegmentDisplay.h  SunController.cpp  SunController.h  UI.cpp  UI.h  WateringController.cpp  WateringController.h  WindController.cpp  WindController.h  main.cpp
Devices/: Camera.cpp  Camera.h  DHT11.cpp  DHT22.cpp  HD44780.cpp  HD44780.h  MCP3208.cpp  MCP3208.h  PCA9685.cpp  PCA9685.h  SEN0193.cpp  SEN0193.h  SoilHumiditySensor.cpp  SoilHumiditySensor.h
Peripherals/: I2C.cpp  I2C.h  SPI.cpp  SPI.h
